--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
 .nav-tabs{
     background-color: rgba(255,255,255, 0.3); 
 }
+.footerLink{
+    padding: 0 10px;
+}
+
 body {
     /* Margin bottom by footer height */
     position: relative;
