--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,52 @@
     padding: 0 10px;
 }
 
+
+.imageContainer {
+    position: relative;
+    width: 50%;
+  }
+  
+  .image {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 7px;
+    border: 2px solid lightgray;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: rgba(148, 148, 148, 0.5);
+    border-radius: 7px;
+    border: 2px solid lightgray;
+  }
+  
+  .imageContainer:hover .overlay {
+    opacity: 1;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+
 body {
     /* Margin bottom by footer height */
     position: relative;
