--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,24 @@ body {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
+
+section {
+  display: flex;
+}
+aside{
+  flex: 1;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+  
+}
