--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,182 @@
-﻿.nav-link{
+﻿
+body {
+  /* Margin bottom by footer height */
+  position: relative;
+  background: url('images/bg.jpg') no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+}
+
+
+/* Main Container */
+.container{
+  margin-top: 70px;
+  margin-bottom: 75px;
+  display: grid;
+  grid-auto-rows: minmax(50px, auto);
+  grid-template-columns: repeat(6, 1fr);
+  background-color: rgba(255,255,255, 0.5);
+  border-radius: 15px;
+  border: solid 2px #808080;
+  color: #504f54;
+  max-width: 800px;
+}
+.heading-row{
+  grid-column: 1/7;
+  grid-row: 1;
+}
+.about-subheading-one{
+  grid-column: 1/7;
+  grid-row: 2;
+  padding: 10px;
+}
+.home-column-one{
+  grid-column: 1/5;
+  grid-row: 3;
+  padding: 10px;
+}
+.home-column-two{
+  grid-column: 6/7;
+  grid-row: 3;
+  padding: 10px;
+}
+.about-column-one{
+  grid-column: 1/3;
+  grid-row:3/4;
+  padding: 10px;
+}
+.about-column-two{
+  grid-column: 3/5;
+  grid-row:3/4;
+  padding: 10px;
+}
+.about-column-three{
+  grid-column: 5/7;
+  grid-row:3/4;
+  padding: 10px;
+}
+.projects{
+  grid-column: 1/7;
+  grid-row: 2/7;
+  padding: 10px;
+}
+.profile-image{
+  border-radius: 90px;
+  border: 2px solid lightgray;
+  max-width: 300px;
+}
+/* Navigation Bar */
+.navigation{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 10px;
+}
+.nav-link{
     color: black;
     font-weight: bold;
-
+}
+.nav-link:hover{
+  color: lightseagreen;
 }
 .nav-tabs{
     background-color: rgba(255,255,255, 0.3); 
 }
-.footerLink{
-    padding: 0 10px;
-}
 
-
-.imageContainer {
-    position: relative;
-    width: 50%;
-  }
-  
-  .image {
-    display: block;
-    width: 100%;
-    height: auto;
-    border-radius: 7px;
-    border: 2px solid lightgray;
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: rgba(148, 148, 148, 0.5);
-    border-radius: 7px;
-    border: 2px solid lightgray;
-  }
-  
-  .imageContainer:hover .overlay {
-    opacity: 1;
-  }
-  
-  .text {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-
-
-body {
-    /* Margin bottom by footer height */
-    position: relative;
-   background: url('images/bg.jpg') no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    overflow: hidden;
-}
-
+/* Footer */
 .footer {
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
-}
-
-section {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  line-height: 60px;
 }
-aside{
-  flex: 1;
+.footer-icon{
+  height: 25px;
+  justify-content: space-between;
+  padding: 0 10px;
 }
 
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  text-align: center;
+/* Skill Bar */
+@keyframes load{
+  from {
+    width: 0%
+  }
 }
+@-webkit-keyframes load{
+  from {
+    width: 0%
+  }
+}
+@-moz-keyframes load{
+  from {
+    width: 0%
+  }
+}
+@-o-keyframes load{
+  from {
+    width: 0%
+  }
+}
+.bar{
+  background-color: #EEE;
+  padding: 2px;
+  border-radius: 15px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  color: #FFF;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+  display: grid;
+}
+.bar::before{
+  content:  attr(data-skill);
+  background-color: #f3b0ff;
+  display: inline-block;
+  padding: 5px 0 5px 10px;
+  border-radius: inherit;
+  animation: load 2s 0s;
+  -webkit-animation: load 2s 0s;
+  -moz-animation: load 2s 0s;
+  -o-animation: load 2s 0s;
+}
+.bar.front::before{
+  background-color: #ffcc33;
+}
+.bar.middle::before{
+  background-color: #a6e3b3;
+}
+.bar.back::before{
+  background-color: #a6cfe3;
+}
+.bar.learning::before{
+  width: calc(20% - 10px);
+}
+.bar.basic::before{
+  width: calc(40% - 10px);
+}
+.bar.intermediate::before{
+  width: calc(60% - 10px);
+}
+.bar.advanced::before{
+  width: calc(80% - 10px);
+}
+.bar.expert::before{
+  width: calc(100% - 10px);
+}
+
 
 @media screen and (max-width: 600px) {
-  .column {
+  .profile-image{
+    max-width: 150px;
+  }
+  body{
     width: 100%;
   }
-  
+  .navigation{
+    padding: 0;
+  }
 }
