--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 ﻿
 body {
-  /* Margin bottom by footer height */
   position: relative;
   background: url('images/bg.jpg') no-repeat;
   background-attachment: fixed;
@@ -8,64 +7,6 @@ body {
   width: 100%;
 }
 
-
-/* Main Container */
-.container{
-  margin-top: 70px;
-  margin-bottom: 75px;
-  display: grid;
-  grid-auto-rows: minmax(50px, auto);
-  grid-template-columns: repeat(6, 1fr);
-  background-color: rgba(255,255,255, 0.5);
-  border-radius: 15px;
-  border: solid 2px #808080;
-  color: #504f54;
-  max-width: 800px;
-}
-.heading-row{
-  grid-column: 1/7;
-  grid-row: 1;
-}
-.about-subheading-one{
-  grid-column: 1/7;
-  grid-row: 2;
-  padding: 10px;
-}
-.home-column-one{
-  grid-column: 1/5;
-  grid-row: 3;
-  padding: 10px;
-}
-.home-column-two{
-  grid-column: 6/7;
-  grid-row: 3;
-  padding: 10px;
-}
-.about-column-one{
-  grid-column: 1/3;
-  grid-row:3/4;
-  padding: 10px;
-}
-.about-column-two{
-  grid-column: 3/5;
-  grid-row:3/4;
-  padding: 10px;
-}
-.about-column-three{
-  grid-column: 5/7;
-  grid-row:3/4;
-  padding: 10px;
-}
-.projects{
-  grid-column: 1/7;
-  grid-row: 2/7;
-  padding: 10px;
-}
-.profile-image{
-  border-radius: 90px;
-  border: 2px solid lightgray;
-  max-width: 300px;
-}
 /* Navigation Bar */
 .navigation{
   position: fixed;
@@ -84,6 +25,76 @@ body {
     background-color: rgba(255,255,255, 0.3); 
 }
 
+/* Content Container */
+.container{
+  margin-top: 70px;
+  margin-bottom: 75px;
+  display: grid;
+  grid-auto-rows: minmax(50px, auto);
+  grid-template-columns: repeat(6, 1fr);
+  background-color: rgba(255,255,255, 0.5);
+  border-radius: 15px;
+  border: solid 2px #808080;
+  color: #504f54;
+  max-width: 800px;
+}
+/* Content Styling */
+.heading-row{
+  grid-column: 1/7;
+  grid-row: 1;
+}
+/* Home Page */
+.home-column-one{
+  grid-column: 1/5;
+  grid-row: 3;
+  padding: 10px;
+}
+.home-column-two{
+  grid-column: 6/7;
+  grid-row: 3;
+  padding: 10px;
+}
+.profile-image{
+  border-radius: 90px;
+  border: 2px solid lightgray;
+  max-width: 300px;
+}
+/* About Page */
+.about-subheading-one{
+  grid-column: 1/7;
+  grid-row: 2;
+  padding: 10px;
+}
+.about-column-one{
+  grid-column: 1/4;
+  grid-row:3;
+  padding: 10px;
+  text-align:center;
+}
+.about-column-two{
+  grid-column: 4/7;
+  grid-row:3;
+  padding: 10px;
+  text-align:center;
+}
+.about-column-three{
+  grid-column: 1/4;
+  grid-row:4;
+  padding: 10px;
+  text-align:center;
+}
+.bubble{
+  border: 1px solid #bbb;
+  padding: 10px;
+  border-radius: 10px;;
+  background-color: rgba(255,255,255, 0.6);
+}
+/* Projects Page */
+.projects{
+  grid-column: 1/7;
+  grid-row: 2/7;
+  padding: 10px;
+}
 /* Footer */
 .footer {
   display: flex;
@@ -101,74 +112,80 @@ body {
 }
 
 /* Skill Bar */
-@keyframes load{
-  from {
-    width: 0%
-  }
-}
-@-webkit-keyframes load{
-  from {
-    width: 0%
-  }
-}
-@-moz-keyframes load{
-  from {
-    width: 0%
-  }
-}
-@-o-keyframes load{
-  from {
-    width: 0%
-  }
-}
 .bar{
-  background-color: #EEE;
-  padding: 2px;
-  border-radius: 15px;
+  margin: 20px 0;
+}
+.bar:first-child{
+  margin-top: 0px;
+}
+.bar .info{
   margin-bottom: 5px;
-  font-size: 14px;
-  color: #FFF;
-  font-weight: bold;
-  text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-  display: grid;
 }
-.bar::before{
-  content:  attr(data-skill);
-  background-color: #f3b0ff;
-  display: inline-block;
-  padding: 5px 0 5px 10px;
-  border-radius: inherit;
-  animation: load 2s 0s;
-  -webkit-animation: load 2s 0s;
-  -moz-animation: load 2s 0s;
-  -o-animation: load 2s 0s;
+.bar .info span{
+  font-weight: 500;
+  font-size: 17px;
+  opacity: 0;
+  animation: showText 0.5s 1s linear forwards;
 }
-.bar.front::before{
-  background-color: #ffcc33;
-}
-.bar.middle::before{
-  background-color: #a6e3b3;
-}
-.bar.back::before{
-  background-color: #a6cfe3;
-}
-.bar.learning::before{
-  width: calc(20% - 10px);
-}
-.bar.basic::before{
-  width: calc(40% - 10px);
-}
-.bar.intermediate::before{
-  width: calc(60% - 10px);
-}
-.bar.advanced::before{
-  width: calc(80% - 10px);
-}
-.bar.expert::before{
-  width: calc(100% - 10px);
+@keyframes showText {
+  100%{
+    opacity: 1;
+  }
 }
 
+.bar .progress-line{
+  height: 10px;
+  width: 100%;
+  background: #f0f0f0;
+  position: relative;
+  transform: scaleX(0);
+  transform-origin: left;
+  border-radius: 10px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05),
+              0 1px rgba(255,255,255,0.8);
+  animation: animate 1s cubic-bezier(1,0,0.5,1) forwards;
+}
+@keyframes animate {
+  100%{
+    transform: scaleX(1);
+  }
+}
+.bar .progress-line span{
+  height: 100%;
+  position: absolute;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  background: #a6e3b3;
+  animation: animate 1s 1s cubic-bezier(1,0,0.5,1) forwards;
+}
+/* Skill Bar Percents */
+.bar .progress-line.html span{
+  width: 70%;
+}
+.bar .progress-line.css span{
+  width: 70%;
+}
+.bar .progress-line.javascript span{
+  width: 40%;
+}
+.bar .progress-line.c-sharp span{
+  width: 40%;
+}
+.bar .progress-line.sql span{
+  width: 50%;
+}
+.bar .progress-line.react span{
+  width: 50%;
+}
+.bar .progress-line.react-native span{
+  width: 40%;
+}
+.bar .progress-line.google-analytics span{
+  width: 45%;
+}
 
+/* Media Settings */
 @media screen and (max-width: 600px) {
   .profile-image{
     max-width: 150px;
@@ -178,5 +195,11 @@ body {
   }
   .navigation{
     padding: 0;
+  }
+  .progress-line span::after{
+    animation: none;
+  }
+  .progress-line span::before{
+    animation: none;
   }
 }
