--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
   padding: 10px;
   text-align:center;
 }
-.bubble{
+.about-column-one .bubble{
   border: 1px solid #bbb;
   padding: 10px;
   border-radius: 10px;;
