--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,75 @@
 ﻿
+:root {
+
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+html{
+  overflow-y:scroll;
+}
+
 body {
   position: relative;
   background: url('images/bg.jpg') no-repeat;
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
+  font-family: var(--bs-font-sans-serif);
+  margin: 0;
+}
+
+.text-center{
+  text-align: center !important;
+}
+h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+h1, .h1 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+@media (min-width: 1200px) {
+  h1, .h1 {
+    font-size: 2.5rem;
+  }
+}
+
+h2, .h2 {
+  font-size: calc(1.325rem + 0.9vw);
+}
+@media (min-width: 1200px) {
+  h2, .h2 {
+    font-size: 2rem;
+  }
+}
+
+h3, .h3 {
+  font-size: calc(1.3rem + 0.6vw);
+}
+@media (min-width: 1200px) {
+  h3, .h3 {
+    font-size: 1.75rem;
+  }
+}
+
+h4, .h4 {
+  font-size: calc(1.275rem + 0.3vw);
+}
+@media (min-width: 1200px) {
+  h4, .h4 {
+    font-size: 1.5rem;
+  }
+}
+
+h5, .h5 {
+  font-size: 1.25rem;
+}
+
+h6, .h6 {
+  font-size: 1rem;
 }
 
 /* Navigation Bar */
@@ -14,15 +79,63 @@ body {
   width: 100%;
   padding: 10px;
 }
+.nav{
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
 .nav-link{
     color: black;
     font-weight: bold;
-}
-.nav-link:hover{
-  color: lightseagreen;
+    display: block;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 .nav-tabs{
-    background-color: rgba(255,255,255, 0.3); 
+  background-color: rgba(255,255,255, 0.3); 
+}
+.nav-tabs .nav-link {
+  margin-bottom: -1px;
+  background: none;
+  border: 1px solid transparent;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
+  border-color: #e9ecef #e9ecef #dee2e6;
+  color: lightseagreen;
+  isolation: isolate;
+  border-radius: 3px;
+}
+.nav-link.disabled {
+  color: #6c757d;
+  pointer-events: none;
+  cursor: default;
+}
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  color: #495057;
+  background-color: #fff;
+  border-color: #dee2e6 #dee2e6 #fff;
+}
+.nav-fill > .nav-link,
+.nav-fill .nav-item {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+ul{
+  margin-top: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 /* Content Container */
@@ -37,6 +150,8 @@ body {
   border: solid 2px #808080;
   color: #504f54;
   max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* Content Styling */
 .heading-row{
@@ -60,7 +175,7 @@ body {
   max-width: 300px;
 }
 /* About Page */
-.about-subheading-one{
+.subheading-one{
   grid-column: 1/7;
   grid-row: 2;
   padding: 10px;
@@ -90,11 +205,6 @@ body {
   background-color: rgba(255,255,255, 0.6);
 }
 /* Projects Page */
-.project-title-one{
-  grid-column: 1/7;
-  grid-row: 2;
-  padding: 10px;
-}
 .project-one{
   grid-column: 1/7;
   grid-row: 3/7;
@@ -202,6 +312,9 @@ body {
 
 /* Media Settings */
 @media screen and (max-width: 600px) {
+  :root{
+    scroll-behavior: smooth;
+  }
   .profile-image{
     max-width: 150px;
   }
