--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,9 @@
-﻿
-:root {
-
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-html{
+﻿html{
   overflow-y:scroll;
 }
 
 body {
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   position: relative;
   background: url('images/bg.jpg') no-repeat;
   background-attachment: fixed;
@@ -21,6 +16,7 @@ body {
 .text-center{
   text-align: center !important;
 }
+
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
@@ -143,8 +139,8 @@ ul{
   margin-top: 70px;
   margin-bottom: 75px;
   display: grid;
-  grid-auto-rows: minmax(50px, auto);
-  grid-template-columns: repeat(6, 1fr);
+  /* grid-auto-rows: minmax(50px, auto); */
+  grid-template-columns: [start] repeat(2, 1fr) [end];
   background-color: rgba(255,255,255, 0.5);
   border-radius: 15px;
   border: solid 2px #808080;
@@ -152,22 +148,16 @@ ul{
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  gap: 16px;
+  padding: 16px;
 }
 /* Content Styling */
-.heading-row{
-  grid-column: 1/7;
-  grid-row: 1;
+.heading-title{
+  grid-column: start / end;
 }
 /* Home Page */
-.home-column-one{
-  grid-column: 1/5;
-  grid-row: 3;
-  padding: 10px;
-}
-.home-column-two{
-  grid-column: 6/7;
-  grid-row: 3;
-  padding: 10px;
+.home-image-column{
+  justify-self: center;
 }
 .profile-image{
   border-radius: 90px;
@@ -175,26 +165,11 @@ ul{
   max-width: 300px;
 }
 /* About Page */
-.subheading-one{
-  grid-column: 1/7;
-  grid-row: 2;
-  padding: 10px;
+.heading-subtitle{
+  grid-column: start / end;
+  text-align: start;
 }
-.about-column-one{
-  grid-column: 1/4;
-  grid-row:3;
-  padding: 10px;
-  text-align:center;
-}
-.about-column-two{
-  grid-column: 4/7;
-  grid-row:3;
-  padding: 10px;
-  text-align:center;
-}
-.about-column-three{
-  grid-column: 1/4;
-  grid-row:4;
+.education{
   padding: 10px;
   text-align:center;
 }
@@ -205,21 +180,11 @@ ul{
   background-color: rgba(255,255,255, 0.6);
 }
 /* Projects Page */
-.project-one{
-  grid-column: 1/7;
-  grid-row: 3/7;
+.project{
+  grid-column: start/end;
   padding: 10px;
 }
-.project-title-two{
-  grid-column: 1/7;
-  grid-row: 8;
-  padding: 10px;
-}
-.project-two{
-  grid-column: 1/7;
-  grid-row: 9/13;
-  padding: 10px;
-}
+
 /* Footer */
 .footer {
   display: flex;
