--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ html{
 body {
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   position: relative;
-  background: url('images/bg.jpg') no-repeat;
+  background: no-repeat;
+  background-image: url('images/bg.jpg');
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
