--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
   display: grid;
   grid-template-columns: [start] repeat(2, 1fr) [end];
   background-color: rgba(255,255,255, 0.5);
+  backdrop-filter: blur(4px);
   border-radius: 15px;
   border: solid 2px #808080;
   color: #504f54;
@@ -77,6 +78,7 @@ h6, .h6 {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index:1;
 }
 .nav{
   display: flex;
@@ -96,6 +98,7 @@ h6, .h6 {
 }
 .nav-tabs{
   background-color: rgba(255,255,255, 0.7); 
+  backdrop-filter: blur(1px);
 }
 .nav-tabs .nav-link {
   margin-bottom: -1px;
@@ -141,6 +144,7 @@ ul{
   bottom: 0;
   width: 100%; 
   background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(1px);
   padding: 8px;
 }
 .footer-icon{
