--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ ul{
 
 .home-image-column{
   justify-self: center;
+  align-content: center;
 }
 .profile-image{
   border-radius: 120px;
@@ -164,12 +165,16 @@ ul{
   max-width: 250px;
   grid-column: start/end;
 }
+.welcome{
+  justify-content: center; 
+  align-content: center;
+  padding-top: 35px;
+}
 .paragraph{
   background-color: rgba(255, 255, 255, 0.8);
   grid-column: start / end;
   padding: 0 18px;
   border-radius: 10px;
-
 }
 
 /* About Page */
@@ -427,6 +432,15 @@ ul{
   }
   .profile-image{
     max-width: 120px;
+  }
+  .home-image-column{
+    grid-column: start/end;
+    grid-row: 1;
+  }
+  .welcome{
+    grid-column: start/end;
+    grid-row: 2;
+    padding-top: 0px;
   }
   .column{
     padding: 0;
