--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
   grid-template-columns: [start] repeat(2, 1fr) [end];
   background-color: rgba(255,255,255, 0.5);
   backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 15px;
   color: #504f54;
   max-width: 700px;
@@ -99,6 +100,7 @@ h6, .h6 {
 .nav-tabs{
   background-color: rgba(255,255,255, 0.7); 
   backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
 }
 .nav-tabs .nav-link {
   margin-bottom: -1px;
@@ -145,6 +147,7 @@ ul{
   width: 100%; 
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
   padding: 8px;
 }
 .footer-icon{
@@ -248,17 +251,8 @@ ul{
 .bar .progress-line.sql span{
   width: 50%;
 }
-.bar .progress-line.react span{
-  width: 50%;
-}
 .bar .progress-line.typescript span{
   width: 40%;
-}
-.bar .progress-line.react-native span{
-  width: 40%;
-}
-.bar .progress-line.google-analytics span{
-  width: 45%;
 }
 
 /* Project Page */
