--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,14 @@ ul{
   border-radius: 10px;;
   background-color: rgba(255,255,255, 0.6);
 }
+
+.skills-type{
+  color: rgb(107, 180, 153); 
+  font-weight: bold;
+}
+.skills{
+  font-weight:500;
+}
 /* Skill Bar */
 .bar{
   margin: 10px 0;
@@ -217,10 +225,10 @@ ul{
 .bar .progress-line{
   height: 10px;
   width: 100%;
-  background: #f0f0f0;
+  background: #ffffff;
   position: relative;
   border-radius: 10px;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05), 0 1px rgba(255,255,255,0.8);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05), 0 1px rgba(223, 223, 223, 0.8);
 }
 @keyframes animate {
   100%{
@@ -236,11 +244,8 @@ ul{
   background: rgb(166, 227, 179);
   animation: animate 1.2s cubic-bezier(1,0,0.5,1) forwards;
 }
-.bar .progress-line.html span{
-  width: 70%;
-}
-.bar .progress-line.css span{
-  width: 70%;
+.bar .progress-line.html-css span{
+  width: 60%;
 }
 .bar .progress-line.javascript span{
   width: 40%;
@@ -249,7 +254,7 @@ ul{
   width: 40%;
 }
 .bar .progress-line.sql span{
-  width: 50%;
+  width: 40%;
 }
 .bar .progress-line.typescript span{
   width: 40%;
