--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-color: #ebebeb;
-  width: 100%;
+  width: 100vw;
   font-family: var(--bs-font-sans-serif);
   margin: 0;
 }
@@ -78,7 +78,7 @@ h6, .h6 {
 .navigation{
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index:1;
 }
 .nav{
@@ -144,7 +144,7 @@ ul{
   justify-content: center;
   position: fixed;
   bottom: 0;
-  width: 100%; 
+  width: 100vw; 
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);
