--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,106 @@
 ﻿/* General Settings */
+:root {
+  --bg-color:#ebebeb; 
+  --bg-image: url('images/bg.jpg');
+  --content-footer: rgba(255,255,255, 0.5);
+  --text-container: #504f54;
+  --text-nav-link: #000000;
+  --nav-bg-color: rgba(255,255,255, 0.7);
+  --nav-active-hover: rgba(130, 226, 151, 0.8);
+  --paragraph: rgba(255, 255, 255, 0.8);
+  --bubble: rgba(255, 255, 255, 0.6);
+  --progress-line: #ffffff;
+  --link: #ffffff;
+  --footer-icon: #0f0f0f;
+}
+
+[data-theme="dark"] {
+  --bg-color: #09090b;
+  --bg-image: url('images/bg-dark.jpg');
+  --content-footer: rgba(37, 35, 35, 0.5);
+  --text-container: #dad9e2;
+  --text-nav-link: #F0F0F0;
+  --nav-bg-color: rgba(37,35,35, 0.7);
+  /* --nav-active-hover: rgba(227, 166, 222, 0.8); */
+  --paragraph: rgba(12, 12, 12, 0.8);
+  --bubble: rgba(12, 12, 12, 0.6);
+  --progress-line: #161616;
+  --link: #252525;
+  --footer-icon: rgb(240, 238, 238);
+}
+
+/* Dark Mode Toggle */
+.theme-switch-wrapper {
+  grid-column: start/end;
+  align-items: center;
+  display: flex;
+  margin-left: auto;
+}
+
+.theme-switch-wrapper span {
+  margin-right: 10px;
+  font-size: 1rem;
+}
+.toggle-text {
+  position: relative;
+  top: -4px;
+  right: 5px;
+  color: var(--on-background);
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 22px;
+  position: relative;
+  width: 41px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
+}
+
+.slider::before {
+  background: #fff;
+  bottom: 4px;
+  content: "";
+  height: 14px;
+  left: 4px;
+  position: absolute;
+  transition: 0.4s;
+  width: 14px;
+}
+
+input:checked + .slider {
+  background: var(--bg-color);
+}
+
+input:checked + .slider::before {
+  transform: translateX(18px);
+}
+
+.slider.round {
+  border-radius: 24px;
+}
+
+.slider.round::before {
+  border-radius: 50%;
+}
+
+.fas {
+  font-size: 20px;
+  margin-right: 5px;
+}
 
 html{
   overflow-y:scroll;
@@ -8,11 +110,11 @@ body {
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   position: relative;
   background: no-repeat;
-  background-image: url('images/bg.jpg');
+  background-image: var(--bg-image);
   background-attachment: fixed;
   background-size: cover;
-  background-color: #ebebeb;
-  width: 100vw;
+  background-color: var(--bg-color);
+  width: 100%;
   font-family: var(--bs-font-sans-serif);
   margin: 0;
 }
@@ -23,11 +125,11 @@ body {
   margin-bottom: 75px;
   display: grid;
   grid-template-columns: [start] repeat(2, 1fr) [end];
-  background-color: rgba(255,255,255, 0.5);
+  background-color: var(--content-footer);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 15px;
-  color: #504f54;
+  color: var(--text-container);
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
@@ -78,7 +180,7 @@ h6, .h6 {
 .navigation{
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   z-index:1;
 }
 .nav{
@@ -90,7 +192,7 @@ h6, .h6 {
   border-radius: 5px;
 }
 .nav-link{
-  color: black;
+  color: var(--text-nav-link);
   font-weight: bold;
   display: block;
   padding: 0.5rem 1rem;
@@ -98,7 +200,7 @@ h6, .h6 {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 .nav-tabs{
-  background-color: rgba(255,255,255, 0.7); 
+  background-color: var(--nav-bg-color); 
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);
 }
@@ -111,7 +213,7 @@ h6, .h6 {
 
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
   border-color: #e9ecef #e9ecef #dee2e6;
-  background-color: rgba(166, 227, 179, 0.8);
+  background-color: var(--nav-active-hover);
   isolation: isolate;
   border-radius: 3px;
 }
@@ -123,7 +225,7 @@ h6, .h6 {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: rgb(166, 227, 179, 0.8);
+  background-color: var(--nav-active-hover);
 
 }
 .nav-fill > .nav-link,
@@ -144,16 +246,20 @@ ul{
   justify-content: center;
   position: fixed;
   bottom: 0;
-  width: 100vw; 
-  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%; 
+  background-color: var(--content-footer);
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);
   padding: 8px;
 }
 .footer-icon{
-  height: 25px;
+  font-size: 25px;
   padding-left: 25px;
   padding-right: 25px;
+  color: var(--footer-icon);
+}
+.footer-icon:hover{
+  color: #75b683;
 }
 
 /* Home Page */
@@ -174,7 +280,7 @@ ul{
   align-self: center;
 }
 .paragraph{
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: var(--paragraph);
   grid-column: start / end;
   padding: 0 18px;
   border-radius: 10px;
@@ -197,7 +303,7 @@ ul{
 .bubble{
   padding: 10px;
   border-radius: 10px;;
-  background-color: rgba(255,255,255, 0.6);
+  background-color: var(--bubble);
 }
 
 .skills-type{
@@ -225,7 +331,7 @@ ul{
 .bar .progress-line{
   height: 10px;
   width: 100%;
-  background: #ffffff;
+  background: var(--progress-line);
   position: relative;
   border-radius: 10px;
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.05), 0 1px rgba(223, 223, 223, 0.8);
@@ -282,7 +388,10 @@ ul{
   min-width: 490px;
 }
 .project-github-icon{
-  height: 30px;
+  font-size: 30px;
+}
+.project-github-icon:hover{
+  color: mediumpurple;
 }
 
 /* Blog Page */
@@ -305,6 +414,7 @@ ul{
 .dropdown-icon{
   float: right;
   height: 18px;
+  color: lightgrey;
 }
 
 /* Container */
@@ -313,14 +423,14 @@ ul{
   display: none;
   grid-column: start/end;
   overflow: hidden;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: var(--paragraph);
   border-radius: 5px;
 }
 .link {
   border: 2px solid #bbb;
   border-radius: 5px;
   padding: 2px;
-  background-color: #ffffff;
+  background-color: var(--link);
   color: #75b683;
   font-weight: bold;
   line-height: 2;
