--- a/styles.css
+++ b/styles.css
@@ -280,12 +280,12 @@ ul {
   padding-bottom: 20px;
 }
 .column {
-  padding: 10px;
+  grid-template-columns: auto auto;
 }
 
 /* About Containers */
 .education {
-  padding: 10px;
+  padding-bottom: 20px;
   text-align: center;
 }
 .bubble {
@@ -323,7 +323,7 @@ ul {
   position: relative;
   border-radius: 10px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05),
-    0 1px rgba(223, 223, 223, 0.8);
+    0 1px rgba(159, 159, 159, 0.8);
 }
 @keyframes animate {
   100% {
@@ -339,17 +339,14 @@ ul {
   background: rgb(166, 227, 179);
   animation: animate 1.2s cubic-bezier(1, 0, 0.5, 1) forwards;
 }
-.bar .progress-line.html-css span {
-  width: 60%;
-}
 .bar .progress-line.javascript span {
-  width: 40%;
+  width: 50%;
 }
 .bar .progress-line.c-sharp span {
-  width: 40%;
+  width: 60%;
 }
 .bar .progress-line.sql span {
-  width: 40%;
+  width: 50%;
 }
 .bar .progress-line.typescript span {
   width: 40%;
